--- a/app/static/style/main.css
+++ b/app/static/style/main.css
@@ -128,6 +128,7 @@ html {
 
 .form__submit {
     display: flex;
+    text-align: center;
     background-color: rgba(0, 0, 0, 0);
     border-radius: 0.4em;
     border: #fff solid 1px;
@@ -135,7 +136,7 @@ html {
     font-size: 1.15rem;
     font-weight: 100;
     font-family: 'Open Sans';
-    padding: 0.2em 0.3em;
+    padding: 0.2em 0.4em;
     transition: background-color 0.25s ease;
 }
 
