--- a/app/templates/index-template.html
+++ b/app/templates/index-template.html
@@ -12,9 +12,7 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
     <script
-        src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-        crossorigin="anonymous"
+        src="{{url_for('static', filename='jquery-3.6.0.min.js')}}"
     >
     </script>
 </head>
