make isolation from plotly and google cdn

--- a/app/templates/index-template.html
+++ b/app/templates/index-template.html
@@ -4,17 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{url_for('static', filename='style/main.css')}}">
     <title>PriPre</title>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
-    <script
-        src="{{url_for('static', filename='jquery-3.6.0.min.js')}}"
-    >
-    </script>
+    <script src="{{url_for('static', filename='plotly-latest.min.js')}}"></script>
+    <script src="{{url_for('static', filename='jquery-3.6.0.min.js')}}"></script>
 </head>
 <body class="main-container">
 
