--- a/app/static/style/stats-style.css
+++ b/app/static/style/stats-style.css
@@ -14,7 +14,7 @@ html {
     padding: 0;
     width: 100%;
     height: 100vh;
-    background-image: url('img/background.jpg');
+    background-image: url('../img/background.jpg');
     background-size: cover;
     display: flex;
     flex-direction: column;
