--- a/app/templates/index-template.html
+++ b/app/templates/index-template.html
@@ -11,11 +11,11 @@
 </head>
 <body class="main-container">
 
-    <header class="main-container__header header">
+    <a class="main-container__header header" href="/stats">
         <h1 class="header__text">
             PriPre
         </h1>
-    </header>
+    </a>
     <content class="main-container__content content">
         <section class="content__form-block form-block">
             <form class="form-blcok__form form" id="form">
