--- a/app/templates/stats.html
+++ b/app/templates/stats.html
@@ -11,11 +11,11 @@
 </head>
 <body class="main-container">
 
-    <header class="main-container__header header">
+    <a class="main-container__header header" href="../">
         <h1 class="header__text">
             PriPre
         </h1>
-    </header>
+    </a>
     <content class="main-container__content content">
         <div class="content__left-column">
             <section class="content__form-block form-block">
